api documented using swagger open api

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,5 @@
 spring.application.name=discord
 cors.originPatters=http://localhost:5173,https://discord-detona.vercel.app
+
+springdoc.api-docs.path=/api/v1/meu-discord/swagger.json
+springdoc.swagger-ui.path=/api/v1/meu-discord/swagger-ui.htm
