documentation link was replaced

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
-spring.application.name=discord
+spring.application.name=discord-detona-api
+server.port = 9322
+
 cors.originPatters=http://localhost:5173,https://discord-detona.vercel.app
 
-springdoc.api-docs.path=/api/v1/meu-discord/swagger.json
-springdoc.swagger-ui.path=/api/v1/meu-discord/swagger-ui.html
+springdoc.api-docs.path=/discord-detona-api-documentation/swagger.json
+springdoc.swagger-ui.path=/discord-detona-api-documentation/swagger-ui.html
